use first network interface, upgrade spring boot