@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version>
+    <version>4.0.2</version>
   </parent>
 
   <groupId>com.scaythe</groupId>
@@ -15,17 +15,13 @@
   <version>LATEST-SNAPSHOT</version>
 
   <properties>
-    <java.version>21</java.version>
-    <spring-boot.version>3.1.3</spring-boot.version>
+    <java.version>25</java.version>
+    <spring-boot.version>${project.parent.version}</spring-boot.version>
 
-    <error-prone.version>2.21.1</error-prone.version>
-    <nullaway.version>0.10.14</nullaway.version>
-    <jspecify.version>0.3.0</jspecify.version>
-    <flogger.version>0.7.4</flogger.version>
+    <error-prone.version>2.46.0</error-prone.version>
+    <nullaway.version>0.12.15</nullaway.version>
     <dbus-java.version>3.3.2</dbus-java.version>
-    <oshi-core.version>6.4.0</oshi-core.version>
-    <gson.version>2.10.1</gson.version>
-    <lombok.version>1.18.30</lombok.version>
+    <oshi-core.version>6.9.2</oshi-core.version>
   </properties>
 
   <dependencies>
@@ -46,13 +42,11 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>${gson.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.jspecify</groupId>
       <artifactId>jspecify</artifactId>
-      <version>${jspecify.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.annotation</groupId>
@@ -73,7 +67,19 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+          <fork>true</fork>
           <compilerArgs>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>--should-stop=ifError=FLOW</arg>
             <arg>-XDcompilePolicy=simple</arg>
             <arg>-Xplugin:ErrorProne -Xep:NullAway:ERROR -XepDisableWarningsInGeneratedCode -XepOpt:NullAway:AnnotatedPackages=com.scaythe</arg>
           </compilerArgs>
@@ -91,7 +97,6 @@
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
             </path>
             <path>
               <groupId>org.springframework.boot</groupId>
@@ -104,9 +109,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <executable>true</executable>
-        </configuration>
       </plugin>
     </plugins>
   </build>
